--- a/chocolatey-windowsservercore/dockerfile
+++ b/chocolatey-windowsservercore/dockerfile
@@ -1,8 +1,7 @@
 FROM microsoft/windowsservercore
 
-LABEL Description="Windows Server Core with JDK installed using Chocolatey"
+LABEL Description="Windows Server Core with Chocolatey installed"
 
 MAINTAINER Daniel Scott-Raynsford
 
 RUN powershell $ENV:chocolateyUseWindowsCompression = 'false'; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'));
-RUN choco install jdk8 -y
